WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251352
imported/w3c/web-platform-tests/css/css-transitions/parsing/transition-timing-function-computed.html crashes (libc++ assertions)
https://bugs.webkit.org/show_bug.cgi?id=251352
Summary
imported/w3c/web-platform-tests/css/css-transitions/parsing/transition-timing...
Antoine Quint
Reported
2023-01-30 03:52:17 PST
The test at imported/w3c/web-platform-tests/css/css-transitions/parsing/transition-timing-function-computed.html started crashing once we turned on libc++ assertions in
259122@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2023-01-30 04:53:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9308
EWS
Comment 2
2023-01-30 08:46:42 PST
Committed
259559@main
(8f690bd4d728): <
https://commits.webkit.org/259559@main
> Reviewed commits have been landed. Closing PR #9308 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-30 08:47:18 PST
<
rdar://problem/104822225
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug